--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ body {
     font-size: 18px;
   }
   .navbar {
-    height: 30px;
+    height: 35px;
+
   }
   .navbar > button {
     height: 20px;
@@ -151,6 +152,13 @@ body {
     height: 20px;
     font-size: 10px;
     margin-left: 50px;
+  }
+  .estadoJogo {
+    font-size: 18px;
+  }
+
+  .elementoSorteado {
+    font-size: 14px;
   }
 }
 
