--- a/style.css
+++ b/style.css
@@ -61,13 +61,14 @@ body {
 
 .estadoJogo,
 .elementoSorteado {
-  grid-column: span 5;
+  grid-column: span 18;
   margin-left: auto;
   margin-right: auto;
   font-size: 24px;
   font-weight: bold;
   color: #333;
   padding: 10px;
+  width: screen;
 }
 
 .sortear {
@@ -95,9 +96,9 @@ body {
 
 .container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-auto-flow: row;
+  grid-template-columns: repeat(18, 1fr);
   grid-gap: 10px;
-  max-width: 900px;
   margin: 20px auto;
   padding: 20px;
   background-color: white;
@@ -118,33 +119,8 @@ body {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.b {
-  background-color: #9c27b0; /* Deep Purple */
-  color: white;
-}
-
-.i {
-  background-color: #2196f3; /* Blue */
-  color: white;
-}
-
-.n {
-  background-color: #f44336; /* Red */
-  color: white;
-}
-
-.g {
-  background-color: #4caf50; /* Green */
-  color: white;
-}
-
-.o {
-  background-color: #ff9800; /* Orange */
-  color: white;
-}
-
 .sorteado {
-  background-color: #FBD85D;
+  background-color: #fbd85d;
 }
 
 footer {
@@ -214,49 +190,4 @@ footer {
   background-color: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(3px);
   z-index: 5;
-}
-
-@media screen and (max-width: 600px) {
-  .container {
-    grid-template-columns: repeat(5, 1fr);
-  }
-
-  .numero {
-    font-size: 18px;
-  }
-
-  .navbar {
-    height: 35px;
-  }
-
-  .navbar > button {
-    height: 20px;
-    font-size: 12px;
-  }
-
-  .navbar > .sortear {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 20px;
-    font-size: 10px;
-    margin-left: 50px;
-  }
-
-  .estadoJogo {
-    font-size: 18px;
-  }
-
-  .elementoSorteado {
-    font-size: 14px;
-  }
-
-  .modal {
-    width: 90%;
-    padding: 3rem;
-  }
-
-  .modal h1 {
-    margin-bottom: 15px;
-  }
 }
